Fix : Scaling website now works

--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,14 @@ body {
     width: 20%;
     height: 100vh;
     float: left;
+    z-index: 4;
+}
+
+.screen-container{
+    width: cover;
+    height: cover;
+    position: fixed;
+    z-index: 5;
 }
 
 img {
@@ -28,7 +36,7 @@ img {
 }
 
 .maincard .moving-image-maincard {
-    background: url('images/dotoverlay.png') repeat;
+    background: url('images/overlay.png') repeat;
     z-index: 1;
     position: absolute;
     top: 0;
@@ -52,28 +60,7 @@ img {
     }
 }
 
-
 /*Container ends here*/
-
-/*Takes care of card size based on screen size*/
-@media (max-width: 768px) {
-    .card {
-        width: 100%;
-    }
-}
-
-@media (min-width: 769px) and (max-width: 1024px) {
-    .card {
-        width: 45%;
-    }
-}
-
-@media (min-width: 1025px) {
-    .card {
-        width: 22%;
-    }
-}
-/*ends here */
 
 /* Card Display */
 .card {
@@ -84,7 +71,7 @@ img {
     width: 22%;
     height: 80%;
     z-index: 1;
-    float: left;
+
     padding: 1%;
 }
 .maincard {
@@ -101,28 +88,26 @@ img {
 
 .card .overlay-image-engine {
     position: absolute;
-    top: 75%;
+    top: 85%;
     left: 50%;
     transform: translate(-50%, -50%);
     opacity: 0;
     transition: opacity 0.3s ease-in-out;
     width: 100px; /* Set a fixed width for the overlay image */
     height: auto; /* Set a fixed height for the overlay image */
-    background-color: #d4d4d4b0;
     border-radius: 30%;
     z-index: 1;
 }
 
 .card .overlay-image-available {
     position: absolute;
-    top: 60%;
+    top: 70%;
     left: 50%;
     transform: translate(-50%, -50%);
     opacity: 0;
     transition: opacity 0.3s ease-in-out;
     width: 100px; /* Set a fixed width for the overlay image */
     height: auto; /* Set a fixed height for the overlay image */
-    background-color: #d4d4d4b0;
     border-radius: 30%;
     z-index: 1;
 }
@@ -155,6 +140,45 @@ img {
     opacity: 0; /* Initially hidden */
     transition: opacity 0.3s ease;
     z-index: 1;
+}
+
+
+.overlay-text-visible {
+    position: absolute;
+    border-radius: 10px;
+    width: 85%;
+    top: 70%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    background-color: #00000086;
+    font-size: 16px;
+    font-weight: bold;
+    text-wrap:balance;
+    z-index: 1;
+    text-align: left;
+    padding-left: 10%;
+}
+
+.screen-container .overlay-image-socials{
+    position: fixed;
+    top: 85%;
+    left: 90%;
+    width: 100px;
+    height: auto;
+    animation: scaleSocials 1s linear infinite;
+}
+
+@keyframes scaleSocials {
+    0% {
+        transform: translate(0, 0);
+    }
+    50% {
+        transform: scale(1.05, 1.05)
+    }
+    100% {
+        transform: translate(0, 0);
+    }
 }
 
 .card .hover-gif {
@@ -192,3 +216,61 @@ img {
     transform: scale(1.05);
 }
 /*Card hover ends here*/
+
+/*Takes care of card size based on screen size*/
+@media (max-width: 768px) {
+    .card {
+        width: 100%;
+    }
+
+    .maincard-container{
+        width: 100%;
+        height: 500px;
+        position: relative;
+    }
+    .card-container{
+        margin-top: 3%;
+        width: 100%;
+        margin-left: 0%;
+    }
+
+    .maincard .portrait{
+        width: 200px;
+        top: 65%;
+        left: 75%;
+    }
+
+    .overlay-text-visible {
+        top: 50%;
+    }
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+    .card {
+        width: 100%;
+    }
+
+    .maincard-container{
+        width: 40%;
+    }
+    .card-container{
+        width: 60%;
+        margin-left: 40%;
+    }
+}
+
+@media (min-width: 1025px) {
+    .card {
+        float: left;
+    }
+
+    .maincard-container{
+        width: 20%;
+    }
+    .card-container{
+        width: 80%;
+        margin-left: 20%;
+    }
+
+}
+/*ends here */
