--- a/stylesfocused.css
+++ b/stylesfocused.css
@@ -37,18 +37,42 @@ body {
     }
 }
 
+.project-name{
+    top: 10%;
+    left: 50%;
+    font-size: 100px;
+    font-weight: bold;
+    text-wrap:balance;
+}
 .information-container{
     position: absolute;
-    width: 50%;
+    width: 52%;
+    height: 72%;
+    padding-top: 5%;
+    top: 58%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #99866a;
+    z-index: 1;
+    padding-left: 10%;
+    border-radius: 7%;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 1); /* Adjust the box-shadow as needed */
+}
+.information-container .smallContainer{
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    position: absolute;
+    width: 80%;
+    height: 90%;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: white;
-    background-color: #00000086;
-    font-size: 16px;
-    font-weight: bold;
-    text-wrap:balance;
+    background-color: #b49e7c;
     z-index: 1;
-    text-align: left;
-    padding-left: 10%;
+    border-radius: 1%;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 1); /* Adjust the box-shadow as needed */
+    overflow-y: scroll;
+    overflow-x: hidden;
+    
 }
