--- a/stylesfocused.css
+++ b/stylesfocused.css
@@ -59,8 +59,6 @@ body {
     transform: translate(-50%, -50%);
     background-color: #584e46;
     z-index: 1;
-    overflow-y: visible;
-    overflow-x: hidden;
     border-radius:  1%;
 }
 
@@ -73,6 +71,8 @@ body {
     top: 0%;
     left: 75%;
     z-index: 10;
+
+    transform: translate(-50%, -50%);
 }
 
 
