--- a/stylesfocused.css
+++ b/stylesfocused.css
@@ -1,9 +1,10 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Oswald', sans-serif;
+    font-family: 'Seymour One', sans-serif;
     margin: 0;
     overflow-y: hidden;
     overflow-x: hidden;
-    background-color:  rgb(104, 92, 76);
+    background-color:  rgba(212, 0, 0, 0);
 }
 
 .background-container {
@@ -11,6 +12,7 @@ body {
     width: 100%;
     height: 100%;
 }
+
 
 .background-container .moving-image-background {
     background: url('images/overlay.png') repeat;
@@ -75,6 +77,18 @@ body {
     transform: translate(-50%, -50%);
 }
 
+.title-text {
+    display: flex;
+    height: auto;
+    position: fixed;
+    font-size: xxx-large;
+    -webkit-text-stroke: 2px #473f32; /* WebKit browsers, like Chrome and Safari */
+    top: 5%;
+    left: 40%;
+    z-index: 10;
+    transform: translate(-50%, -50%);
+    color: #584e46;
+}
 
 .video {
     width: 99%;
@@ -99,4 +113,27 @@ body {
 .text-under-video .text-image{
     width: 80%;
     height: 90%;
+}
+/*Takes care of card size based on screen size*/
+@media (max-width: 768px) {
+    .title-text{
+    font-size: x-large;
+    left: 50%;
+    }
+    .easter-egg{
+        width: 30%;
+    }
+
+    .smallContainer{
+        width: 90%;
+    }
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+
+}
+
+@media (min-width: 1025px) {
+
+
 }
