--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,6 @@ img {
     width: 22%;
     height: 80%;
     z-index: 1;
-
     padding: 1%;
 }
 .maincard {
@@ -133,7 +132,7 @@ img {
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
-    background-color: #00000086;
+    background-color: #000000bb;
     font-size: 16px;
     font-weight: bold;
     text-wrap:balance;
@@ -190,7 +189,7 @@ img {
     padding: 1%;
     height: cover;
     opacity: 0;
-    transition: opacity 0.3s ease-in-out;
+    transition: opacity 0.05s ease-in-out;
 }
 
 /*Card display ends here*/
@@ -214,6 +213,11 @@ img {
 .card:hover {
     z-index: 2;
     transform: scale(1.05);
+}
+
+.maincard:hover{
+    z-index: 2;
+    transform: scale(1.05); 
 }
 /*Card hover ends here*/
 
