--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
 }
 /*Container*/
 .card-container {
-    margin-left: 20%;
+    margin-left: 25%;
     width: 80%;
     height: 100vh;
     float: left;
@@ -15,7 +15,7 @@ body {
 
 .maincard-container{
     position: fixed;
-    width: 20%;
+    width: 25%;
     height: 100vh;
     float: left;
     z-index: 4;
@@ -67,10 +67,10 @@ img {
     cursor: pointer;
     transition: background-color 0.3s ease, transform 0.3s ease;
     position: relative;
-    width: 22%;
-    height: 80%;
+    width: 30%;
+    height: 60%;
     z-index: 1;
-    padding: 1%;
+    padding: 1.5%;
 }
 .maincard {
     overflow: hidden;
@@ -124,7 +124,7 @@ img {
     z-index: 2;
 }
 
-.overlay-text {
+.card .overlay-text {
     position: absolute;
     border-radius: 10px;
     width: 85%;
@@ -145,7 +145,7 @@ img {
 .overlay-text-visible {
     position: absolute;
     border-radius: 10px;
-    width: 85%;
+    width: 75%;
     top: 70%;
     left: 50%;
     transform: translate(-50%, -50%);
