--- a/stylesfocused.css
+++ b/stylesfocused.css
@@ -64,6 +64,29 @@ body {
     border-radius:  1%;
 }
 
+.box-container {
+    display: flex;
+    flex-direction: column; 
+    align-items: flex-start;
+    padding: 20px;
+}
+
+  .box {
+    position: center;
+    width: 90%;
+    padding: 20px;
+    background-color: #302a26;
+    text-align: left;
+    
+    cursor: pointer;
+    margin-bottom: 20px;
+    border-radius: 10px;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+  }
+
+  .hidden-text {
+    display: none;
+  }
 
 .easter-egg {
     display: flex;
@@ -82,7 +105,7 @@ body {
     height: auto;
     position: fixed;
     font-size: xxx-large;
-    -webkit-text-stroke: 2px #473f32; /* WebKit browsers, like Chrome and Safari */
+    -webkit-text-stroke: 2px #473f32;
     top: 5%;
     left: 40%;
     z-index: 10;
@@ -114,6 +137,12 @@ body {
     width: 80%;
     height: 90%;
 }
+
+.box:hover{
+    z-index: 2;
+    transform: scale(1.01); 
+}
+
 /*Takes care of card size based on screen size*/
 @media (max-width: 768px) {
     .title-text{
