--- a/stylesfocused.css
+++ b/stylesfocused.css
@@ -1,6 +1,5 @@
 body {
-    font-family: 'Oswald', sans-serif;
-    font-family: 'Seymour One', sans-serif;
+    font-family: 'Arial', sans-serif;
     margin: 0;
     overflow-y: hidden;
     overflow-x: hidden;
@@ -127,13 +126,15 @@ body {
 
 .text-under-video {
     margin-top: 20px;
+    padding-left: 5%;
+    padding-right: 5%;
     text-align: left;
     text-overflow: wrap;
     color: #fff;
     padding-bottom: 10%;
 }
 
-.text-under-video .text-image{
+.text-image img{
     width: 80%;
     height: 90%;
 }
