--- a/stylesfocused.css
+++ b/stylesfocused.css
@@ -38,6 +38,37 @@ body {
     }
 }
 
+.code-snippet {
+    position: relative;
+    background-color: #333333;
+    border: 1px solid #131313;
+    border-left: 4px solid #ff9012;
+    margin: 10px 0;
+    overflow: auto;
+    padding: 15px;
+  }
+  
+  .copy-btn {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    padding: 5px 10px;
+    cursor: pointer;
+    background-color: #333333;
+    color: #fff;
+    border: 2px solid #131313;
+    border-radius:  5px;
+  }
+  
+  .code-snippet pre {
+    margin: 0;
+  }
+  
+  .code-snippet code {
+    display: block;
+    line-height: 1.5;
+  }
+
 .project-name{
     top: 10%;
     left: 50%;
@@ -79,7 +110,7 @@ body {
     
     cursor: pointer;
     margin-bottom: 20px;
-    border-radius: 10px;
+    border-radius: 5px;
     transition: background-color 0.3s ease, transform 0.3s ease;
   }
 
