--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,40 @@
 body {
-    font-family: Arial, sans-serif;
     margin: 0;
     overflow-y: scroll;
     overflow-x: hidden;
-    background-color: #FF9A00;
+    background-image: linear-gradient(#2C3639, #3F4E4F, #2C3639);
+    background-size: 100%;
 }
+
+.bottom-box {
+    width: 100%;
+    background-color: #657A7D;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #2C3639;
+    font-size: 16px;
+    position: relative;
+    margin-top: 20px; /* Adjust margin as needed to create space between the content and the black box */
+    padding: 20px; /* Add padding for better appearance */
+    box-sizing: border-box;
+    border-radius: 20px;
+}
+
+
 /*Container*/
 .card-container {
-    margin-left: 25%;
+    margin-left: 10%;
+    margin-top: 3%;
     width: 80%;
     height: 100vh;
     float: left;
 }
 
-.maincard-container{
-    position: fixed;
-    width: 25%;
-    height: 100vh;
-    float: left;
+.maincard-container {
+    position: relative;
+    width: 100%;
+    height: 65vh;
     z-index: 4;
 }
 
@@ -32,6 +49,7 @@ img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border-radius: 10px; /* This rounds the corners. Adjust the value as needed. */
 }
 
 .maincard .moving-image-maincard {
@@ -70,8 +88,12 @@ img {
     width: 30%;
     height: 60%;
     z-index: 1;
+    float:left;
     margin: 20px;
-    box-sizing: border-box; 
+    box-sizing: border-box;
+    border-radius: 10px; /* This rounds the corners. Adjust the value as needed. */
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5); /* Adjust the box-shadow as needed */
+
 }
 
 .maincard {
@@ -80,7 +102,8 @@ img {
     transition: background-color 0.3s ease, transform 0.3s ease;
     position: relative;
     width: 100%;
-    height: 100%; /* Adjust the height as needed */
+    height: 100%; /* Keep the height as 100% */
+    max-width: none; /* Add this line to override any max-width setting */
     z-index: 1;
     box-shadow: 0 0 20px rgba(0, 0, 0, 1); /* Adjust the box-shadow as needed */
 }
@@ -89,14 +112,13 @@ img {
     text-align: center;
     position: relative;
     cursor: pointer;
-    bottom: 5%;
 }
 .card .overlay-image-engine {
     position: absolute;
     top: 85%;
-    left: 50%;
+    left: 75%;
     transform: translate(-50%, -50%);
-    opacity: 0;
+    opacity: 1;
     transition: opacity 0.3s ease-in-out;
     width: 100px; /* Set a fixed width for the overlay image */
     height: auto; /* Set a fixed height for the overlay image */
@@ -106,10 +128,10 @@ img {
 
 .card .overlay-image-available {
     position: absolute;
-    top: 70%;
-    left: 50%;
+    top: 85%;
+    left: 25%;
     transform: translate(-50%, -50%);
-    opacity: 0;
+    opacity: 1;
     transition: opacity 0.3s ease-in-out;
     width: 100px; /* Set a fixed width for the overlay image */
     height: auto; /* Set a fixed height for the overlay image */
@@ -120,14 +142,14 @@ img {
 
 .maincard .portrait{
     position: absolute;
-    top: 25%;
-    left: 50%;
+    top: 50%;
+    left: 20%;
     transform: translate(-50%, -50%);
-    width: 80%;
+    width: 16%;
     height: auto; /* Set a fixed height for the overlay image */
-    border-radius: 40%;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 1); /* Adjust the box-shadow as needed */
-    outline: 20px solid #FF9A00; /* Adjust the outline thickness and color as needed */
+    border-radius: 100%;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.6); /* Adjust the box-shadow as needed */
+    outline: 6px solid #2C3639; /* Adjust the outline thickness and color as needed */
     z-index: 2;
 }
 
@@ -140,10 +162,10 @@ img {
     transform: translate(-50%, -50%);
     color: white;
     background-color: #000000bb;
-    font-size: 16px;
+    font-size: 12px;
     font-weight: bold;
     text-wrap:balance;
-    opacity: 0; /* Initially hidden */
+    opacity: 0;
     transition: opacity 0.3s ease;
     z-index: 1;
 }
@@ -152,13 +174,12 @@ img {
 .overlay-text-visible {
     position: absolute;
     border-radius: 10px;
-    width: 75%;
-    top: 70%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    width: 40%;
+    top: 50%;
+    left: 65%;
+    transform: translate(-75%, -50%);
     color: white;
-    background-color: #00000086;
-    font-size: 16px;
+    font-size: 20px;
     font-weight: bold;
     text-wrap:balance;
     z-index: 1;
@@ -225,20 +246,18 @@ img {
 /*Card hover ends here*/
 
 /*Takes care of card size based on screen size*/
+/*
 @media (max-width: 768px) {
     .card {
         width: 100%;
     }
 
-    .maincard-container{
-        width: 100%;
-        height: 500px;
-        position: relative;
-    }
-    .card-container{
+    .card-container {
         margin-top: 3%;
-        width: 100%;
-        margin-left: 0%;
+    }
+
+    .maincard-container {
+        height: auto; /* Adjust as needed for responsive behavior */ /*
     }
 
     .maincard .portrait{
@@ -272,12 +291,13 @@ img {
     }
 
     .maincard-container{
-        width: 20%;
+        width: 100%;
+        height: 20%;
+        
     }
     .card-container{
-        width: 80%;
-        margin-left: 20%;
+        width: 100%;
     }
 
-}
+}*/
 /*ends here */
