--- a/styles.css
+++ b/styles.css
@@ -93,7 +93,7 @@ img {
         transform: translate(0, 0);
     }
     50% {
-        transform: translate(-25%, -25%); /* Adjust values for proper movement */
+        transform: translate(-25%, -25%);
     }
     100% {
         transform: translate(0, 0);
@@ -101,6 +101,24 @@ img {
 }
 
 /*Container ends here*/
+
+.container {
+    display: flex; 
+    justify-content: space-around;
+    align-items: center;
+  }
+  
+  .box {
+    width: 20%;
+    height: 75px;
+    background-color: #2C3639;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 5px;
+    text-align: center;
+    border-radius: 20%;
+  }
 
 /* Card Display */
 .card {
@@ -269,58 +287,17 @@ img {
 /*Card hover ends here*/
 
 /*Takes care of card size based on screen size*/
-/*
+
 @media (max-width: 768px) {
-    .card {
-        width: 100%;
-    }
 
-    .card-container {
-        margin-top: 3%;
-    }
-
-    .maincard-container {
-        height: auto; /* Adjust as needed for responsive behavior */ /*
-    }
-
-    .maincard .portrait{
-        width: 200px;
-        top: 65%;
-        left: 75%;
-    }
-
-    .overlay-text-visible {
-        top: 50%;
-    }
 }
 
 @media (min-width: 769px) and (max-width: 1024px) {
-    .card {
-        width: 100%;
-    }
 
-    .maincard-container{
-        width: 40%;
-    }
-    .card-container{
-        width: 60%;
-        margin-left: 40%;
-    }
 }
 
 @media (min-width: 1025px) {
-    .card {
-        float: left;
-    }
 
-    .maincard-container{
-        width: 100%;
-        height: 20%;
-        
-    }
-    .card-container{
-        width: 100%;
-    }
 
-}*/
+}
 /*ends here */
