--- a/stylesfocused.css
+++ b/stylesfocused.css
@@ -156,6 +156,12 @@ body {
     display: none;
   }
 
+  .click-this
+  {
+    text-align: left;
+    font-size: small;
+    color: #fabf66;
+  }
 .easter-egg {
     display: flex;
     width: 10%;
