--- a/styles.css
+++ b/styles.css
@@ -243,9 +243,17 @@ img {
     right: 0;
     background-color: #f9f9f91c;
     border-radius: 2vh;
-    color: #0004ff;
     padding: 10px;
     z-index: 10;
+  }
+  
+  .hover-text {
+    transition: transform 0.3s ease;
+    display: inline-block;
+  }
+  
+  .hover-text:hover {
+    transform: scale(1.1) rotate(-7deg);
   }
 
 .card .hover-gif {
