--- a/stylesfocused.css
+++ b/stylesfocused.css
@@ -16,11 +16,19 @@ body {
   bottom: 0;
   right: 0;
   background-color: #f9f9f91c;
-  border-radius: 1.5vh;
-  color: #0004ff;
+  border-radius: 2vh;
   padding: 10px;
-  font-size: smaller;
   z-index: 10;
+}
+
+.hover-text {
+  transition: transform 0.3s ease;
+  display: inline-block;
+  font-size: x-small;
+}
+
+.hover-text:hover {
+  transform: scale(1.1) rotate(-7deg);
 }
 
 /*Scrollbar*/
@@ -144,6 +152,7 @@ body {
     z-index: 1;
     border-radius:  1%;
 }
+
 
 .box-container {
     display: flex;
