--- a/styles.css
+++ b/styles.css
@@ -250,6 +250,7 @@ img {
   .hover-text {
     transition: transform 0.3s ease;
     display: inline-block;
+    text-decoration: none;
   }
   
   .hover-text:hover {
