--- a/stylesfocused.css
+++ b/stylesfocused.css
@@ -25,6 +25,7 @@ body {
   transition: transform 0.3s ease;
   display: inline-block;
   font-size: x-small;
+  text-decoration: none;
 }
 
 .hover-text:hover {
