Feature : Added Honker and revload to projects.

--- a/stylesfocused.css
+++ b/stylesfocused.css
@@ -164,12 +164,13 @@ body {
   .box {
     position: center;
     width: 100%;
-    padding: 20px;
+    padding: 2px;
+    padding-left: 2%;
     background-color: #3C4A4B;
     text-align: left;
     
     cursor: pointer;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     border-radius: 5px;
     transition: background-color 0.3s ease, transform 0.3s ease;
   }
