--- a/styles.css
+++ b/styles.css
@@ -50,13 +50,13 @@ body {
     margin-top: -15%;
     width: 80%;
     height: 100vh;
-    float: left;
+    float: center;
 }
 
 .maincard-container {
     position: relative;
     width: 100%;
-    height: 65vh;
+    height: 45vh;
     z-index: 4;
     overflow: visible;
 }
@@ -127,8 +127,8 @@ img {
     cursor: pointer;
     transition: background-color 0.3s ease, transform 0.3s ease;
     position: relative;
-    width: 30%;
-    height: 60%;
+    width: 100%;
+    height: 30%;
     z-index: 1;
     float:left;
     margin: 20px;
@@ -157,8 +157,8 @@ img {
 }
 .card .overlay-image-engine {
     position: absolute;
-    top: 85%;
-    left: 75%;
+    top: 25%;
+    left: 90%;
     transform: translate(-50%, -50%);
     opacity: 0;
     transition: opacity 0.3s ease-in-out;
@@ -170,8 +170,8 @@ img {
 
 .card .overlay-image-available {
     position: absolute;
-    top: 85%;
-    left: 25%;
+    top: 75%;
+    left: 90%;
     transform: translate(-50%, -50%);
     opacity: 0;
     transition: opacity 0.3s ease-in-out;
@@ -198,10 +198,10 @@ img {
 .card .overlay-text {
     position: absolute;
     border-radius: 10px;
-    width: 85%;
-    top: 35%;
+    width: 45%;
+    top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-105%, -50%);
     color: white;
     background-color: #000000bb;
     font-size: 12px;
