--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ body {
     position: relative;
     width: 100%;
     height: 45vh;
-    z-index: 4;
+    z-index: 100;
     overflow: visible;
 }
 
@@ -120,7 +120,7 @@ img {
     text-align: center;
     border-radius: 20%;
   }
-  
+
 
 /* Card Display */
 .card {
@@ -161,7 +161,7 @@ img {
     top: 25%;
     left: 90%;
     transform: translate(-50%, -50%);
-    opacity: 0;
+    opacity: 1;
     transition: opacity 0.3s ease-in-out;
     width: 100px; /* Set a fixed width for the overlay image */
     height: auto; /* Set a fixed height for the overlay image */
@@ -174,7 +174,7 @@ img {
     top: 75%;
     left: 90%;
     transform: translate(-50%, -50%);
-    opacity: 0;
+    opacity: 1;
     transition: opacity 0.3s ease-in-out;
     width: 100px; /* Set a fixed width for the overlay image */
     height: auto; /* Set a fixed height for the overlay image */
@@ -208,7 +208,7 @@ img {
     font-size: 12px;
     font-weight: bold;
     text-wrap:balance;
-    opacity: 0;
+    opacity: 1;
     transition: opacity 0.3s ease;
     z-index: 1;
 }
@@ -252,6 +252,7 @@ img {
     transition: transform 0.3s ease;
     display: inline-block;
     text-decoration: none;
+    cursor: pointer;
   }
   
   .hover-text:hover {
