--- a/styles.css
+++ b/styles.css
@@ -245,6 +245,7 @@ img {
     background-color: #f9f9f91c;
     border-radius: 2vh;
     padding: 10px;
+    font-size: medium;
     z-index: 10;
   }
   
