--- a/stylesfocused.css
+++ b/stylesfocused.css
@@ -102,6 +102,15 @@ body {
     overflow: auto;
     padding: 15px;
   }
+
+  .math-snippet {
+    position: relative;
+    background-color: #333333;
+    border: 1px solid #131313;
+    border-left: 4px solid #33b40c;
+    overflow: auto;
+    padding: 15px;
+  }
   
   .my-line {
     width: 100%;
