--- a/styles.css
+++ b/styles.css
@@ -2,55 +2,25 @@ body {
     margin: 0;
     overflow-y: scroll;
     overflow-x: hidden;
-    background-image: linear-gradient(#353738, #353738, #353738);
+    background-color: #15202B;
     background-size: 100%;
 }
 
-.bottom-box {
+.bottom-container {
     width: 100%;
-    background-color: #657A7D;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #2C3639;
-    font-size: 16px;
-    position: relative;
-    margin-top: 20px; /* Adjust margin as needed to create space between the content and the black box */
-    padding: 20px; /* Add padding for better appearance */
-    box-sizing: border-box;
-    border-radius: 20px;
+    height: 100vh;
 }
-
-.path-0{
-    animation: pathAnim-0 4s linear infinite;
-  }
-  
-  @keyframes pathAnim-0{
-    0%{
-      d: path("M 0,400 L 0,150 C 56.58118556701031,196.92783505154637 113.16237113402062,243.85567010309276 165,223 C 216.83762886597938,202.14432989690724 263.9317010309278,113.50515463917526 331,82 C 398.0682989690722,50.49484536082474 485.11082474226805,76.12371134020619 550,83 C 614.889175257732,89.87628865979381 657.625,78 717,85 C 776.375,92 852.3891752577321,117.87628865979383 907,125 C 961.6108247422679,132.12371134020617 994.8182989690722,120.49484536082471 1055,122 C 1115.1817010309278,123.50515463917529 1202.3376288659795,138.14432989690724 1271,145 C 1339.6623711340205,151.85567010309276 1389.8311855670104,150.92783505154637 1440,150 L 1440,400 L 0,400 Z");
-    }
-    25%{
-      d: path("M 0,400 L 0,150 C 64.83615611192931,165.70544918998527 129.67231222385863,181.41089837997055 185,191 C 240.32768777614137,200.58910162002945 286.1469072164948,204.0618556701031 336,190 C 385.8530927835052,175.9381443298969 439.74005891016213,144.34167893961708 514,141 C 588.2599410898379,137.65832106038292 682.8928571428571,162.57142857142856 745,145 C 807.1071428571429,127.42857142857144 836.6885125184093,67.37260677466863 885,75 C 933.3114874815907,82.62739322533137 1000.353092783505,157.93814432989691 1067,166 C 1133.646907216495,174.06185567010309 1199.89911634757,114.87481590574376 1262,101 C 1324.10088365243,87.12518409425624 1382.0504418262149,118.56259204712812 1440,150 L 1440,400 L 0,400 Z");
-    }
-    50%{
-      d: path("M 0,400 L 0,150 C 57.13125920471282,154.2161266568483 114.26251840942564,158.43225331369663 168,163 C 221.73748159057436,167.56774668630337 272.08118556701027,172.48711340206185 334,160 C 395.91881443298973,147.51288659793815 469.41273932253307,117.61929307805596 531,117 C 592.5872606774669,116.38070692194404 642.2678571428571,145.03571428571428 708,134 C 773.7321428571429,122.96428571428571 855.5158321060381,72.2378497790869 915,88 C 974.4841678939619,103.7621502209131 1011.6688144329898,186.01288659793815 1064,205 C 1116.3311855670102,223.98711340206185 1183.8089101620028,179.71060382916053 1249,160 C 1314.1910898379972,140.28939617083947 1377.0955449189987,145.14469808541975 1440,150 L 1440,400 L 0,400 Z");
-    }
-    75%{
-      d: path("M 0,400 L 0,150 C 44.53902798232696,111.24687039764359 89.07805596465391,72.4937407952872 154,78 C 218.9219440353461,83.5062592047128 304.2268041237113,133.27190721649484 380,169 C 455.7731958762887,204.72809278350516 522.0147275405008,226.41863033873344 571,222 C 619.9852724594992,217.58136966126656 651.7142857142858,187.05357142857142 706,175 C 760.2857142857142,162.94642857142858 837.1281296023564,169.36708394698084 901,162 C 964.8718703976436,154.63291605301916 1015.7731958762888,133.4780927835052 1076,143 C 1136.2268041237112,152.5219072164948 1205.7790868924887,192.72054491899854 1268,199 C 1330.2209131075113,205.27945508100146 1385.1104565537557,177.63972754050073 1440,150 L 1440,400 L 0,400 Z");
-    }
-    100%{
-      d: path("M 0,400 L 0,150 C 56.58118556701031,196.92783505154637 113.16237113402062,243.85567010309276 165,223 C 216.83762886597938,202.14432989690724 263.9317010309278,113.50515463917526 331,82 C 398.0682989690722,50.49484536082474 485.11082474226805,76.12371134020619 550,83 C 614.889175257732,89.87628865979381 657.625,78 717,85 C 776.375,92 852.3891752577321,117.87628865979383 907,125 C 961.6108247422679,132.12371134020617 994.8182989690722,120.49484536082471 1055,122 C 1115.1817010309278,123.50515463917529 1202.3376288659795,138.14432989690724 1271,145 C 1339.6623711340205,151.85567010309276 1389.8311855670104,150.92783505154637 1440,150 L 1440,400 L 0,400 Z");
-    }
-  }
-
-
 /*Container*/
 .card-container {
     margin-left: 10%;
-    margin-top: -15%;
+    margin-top: 5%;
     width: 80%;
     height: 100vh;
-    float: center;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(45%, 1fr));
+    gap: 280px 20px;
+    justify-content: center;
+    align-items: start;
 }
 
 .maincard-container {
@@ -58,6 +28,7 @@ body {
     width: 100%;
     height: 45vh;
     z-index: 100;
+    padding-bottom: 0%;
     overflow: visible;
 }
 
@@ -72,7 +43,7 @@ img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    border-radius: 10px; /* This rounds the corners. Adjust the value as needed. */
+    border-radius: 10px;
 }
 
 .maincard .moving-image-maincard {
@@ -111,44 +82,42 @@ img {
   
   .box {
     width: 20%;
-    height: 75px;
-    background-color: #282a2b;
+    height: auto;
     display: flex;
     justify-content: center;
+    border-style: dashed;
     align-items: center;
     margin: 5px;
+    padding: 5px;
     text-align: center;
     border-radius: 20%;
   }
 
 
 /* Card Display */
+/* General Card Styling */
 .card {
-    text-align: center;
-    cursor: pointer;
-    transition: background-color 0.3s ease, transform 0.3s ease;
     position: relative;
-    width: 100%;
-    height: 30%;
-    z-index: 1;
-    float:left;
-    margin: 20px;
+    width: 80%;
+    height: 200%;
+    margin: 20px 20px 40px 20px;
     box-sizing: border-box;
-    border-radius: 10px; /* This rounds the corners. Adjust the value as needed. */
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5); /* Adjust the box-shadow as needed */
-
+    overflow: hidden;
+    transition: transform 0.3s ease; 
 }
 
-.maincard {
-    overflow: hidden;
+.card-title {
     text-align: center;
-    transition: background-color 0.3s ease, transform 0.3s ease;
-    position: relative;
-    width: 100%;
-    height: 100%; /* Keep the height as 100% */
-    max-width: none; /* Add this line to override any max-width setting */
-    z-index: 1;
-    /*box-shadow: 0 0 20px rgba(0, 0, 0, 1); /* Adjust the box-shadow as needed */
+    color: white;
+    font-size: 1.5em;
+    font-weight: bold;
+    padding: 10px;
+    border-radius: 10px 10px 0 0;
+}
+
+.card:hover {
+    transform: scale(1.05);
+    z-index: 2;
 }
 
 .maincard .aboutmetext{
@@ -158,26 +127,26 @@ img {
 }
 .card .overlay-image-engine {
     position: absolute;
-    top: 25%;
-    left: 90%;
+    top: 20%;
+    left: 80%;
     transform: translate(-50%, -50%);
     opacity: 1;
     transition: opacity 0.3s ease-in-out;
-    width: 100px; /* Set a fixed width for the overlay image */
-    height: auto; /* Set a fixed height for the overlay image */
+    width: 60px;
+    height: auto;
     border-radius: 30%;
     z-index: 1;
 }
 
 .card .overlay-image-available {
     position: absolute;
-    top: 75%;
-    left: 90%;
+    top: 20%;
+    left: 20%;
     transform: translate(-50%, -50%);
     opacity: 1;
     transition: opacity 0.3s ease-in-out;
-    width: 100px; /* Set a fixed width for the overlay image */
-    height: auto; /* Set a fixed height for the overlay image */
+    width: 60px;
+    height: auto;
     border-radius: 30%;
     z-index: 1;
 }
@@ -189,30 +158,12 @@ img {
     left: 20%;
     transform: translate(-50%, -50%);
     width: 16%;
-    height: auto; /* Set a fixed height for the overlay image */
+    height: auto;
     border-radius: 100%;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.6); /* Adjust the box-shadow as needed */
-    outline: 6px solid #be9351; /* Adjust the outline thickness and color as needed */
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.6);
+    outline: 3px dashed #be9351;
     z-index: 2;
 }
-
-.card .overlay-text {
-    position: absolute;
-    border-radius: 10px;
-    width: 45%;
-    top: 50%;
-    left: 50%;
-    transform: translate(-105%, -50%);
-    color: white;
-    background-color: #000000bb;
-    font-size: 12px;
-    font-weight: bold;
-    text-wrap:balance;
-    opacity: 1;
-    transition: opacity 0.3s ease;
-    z-index: 1;
-}
-
 
 .overlay-text-visible {
     position: absolute;
@@ -228,6 +179,11 @@ img {
     z-index: 1;
     text-align: left;
     padding-left: 10%;
+}
+
+.overlay-text{
+    color: white;
+    padding: 5%;
 }
 
 .screen-container .overlay-image-socials{
@@ -272,6 +228,125 @@ img {
     transition: opacity 0.05s ease-in-out;
 }
 
+/*TIMELINE*/
+
+.timeline {
+    display: flex;
+    justify-content: center;
+    position: relative;
+    bottom: 0;
+    top: 50%;
+    gap: 8%;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.timeline::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 0;
+    right: 0;
+    height: 2px;
+    background: white;
+    transform: translateY(-50%);
+}
+
+.project {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.project img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    transform: scale(3);
+    z-index: 2;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.4);
+    outline: 1px dashed white;
+    
+    object-fit: cover;
+}
+
+.project:hover img {
+    transform: scale(3.5);
+    z-index: 5;
+}
+
+.project::after {
+    content: '';
+    position: absolute;
+    left: 50%;
+    width: 2px;
+    background: #dedede;
+    transform: translateX(-50%);
+}
+
+.text-area {
+    position: absolute;
+    width: 200px;
+    border-radius: 8px;
+    text-align: center;
+    top: calc(100% + 20px);
+    left: 50%;
+    color: white;
+    transform: translateX(-50%);
+    z-index: 1;
+}
+
+.project:nth-child(odd) .text-area {
+    top: auto;
+    bottom: calc(100% + 40px);
+}
+
+.project:nth-child(even) .text-area {
+    top: calc(100% + 40px);
+}
+
+.project:nth-child(odd) {
+    margin-top: 150px;
+}
+
+.project:nth-child(odd)::after {
+    bottom: 20px;
+    height: 80px;
+    content: ' ';
+}
+
+.project:nth-child(even) {
+    margin-bottom: 150px;
+}
+
+.project:nth-child(even)::after {
+    top: 20px;
+    height: 80px;
+}
+
+.project:nth-child(even) img {
+    transform-origin: bottom;
+}
+
+.project:nth-child(odd) img {
+    transform-origin: top;
+}
+
+.timeline::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    right: -10px;
+    width: 0;
+    height: 0;
+    border-top: 5px solid transparent;
+    border-bottom: 5px solid transparent;
+    border-left: 20px solid #e9e9e9;
+    transform: translateY(-50%);
+}
+
 /*Card display ends here*/
 
 /*Card hover*/
@@ -300,10 +375,6 @@ img {
 /*Takes care of card size based on screen size*/
 
 @media (max-width: 768px) {
-    .card {
-        width: 100%;
-        height: 60%;
-    }
 
     .overlay-image-engine {
         width: 50px;
@@ -352,4 +423,3 @@ img {
 
 }
 /*ends here */
-
