--- a/styles.css
+++ b/styles.css
@@ -15,10 +15,10 @@ body {
     margin-left: 10%;
     margin-top: 5%;
     width: 80%;
-    height: 100vh;
+    height: auto;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(45%, 1fr));
-    gap: 280px 20px;
+    grid-template-columns: repeat(2, 1fr); /* Changed here */
+    gap: 60px 20px;
     justify-content: center;
     align-items: start;
 }
@@ -74,14 +74,13 @@ img {
 /*Container ends here*/
 
 .container {
-    display: flex; 
-    justify-content: space-around;
-    align-items: center;
-    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 0px;
   }
   
   .box {
-    width: 20%;
     height: auto;
     display: flex;
     justify-content: center;
@@ -380,6 +379,11 @@ img {
         width: 50px;
     }
 
+    .bottom-container {
+        width: 100%;
+        height: 50vh;
+    }
+
     .maincard .portrait {
         width: 50%;
         left: 50%;
@@ -394,26 +398,23 @@ img {
 
     .card-container {
         margin-top: 3%;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 0px 20px;
     }
 
     .maincard-container{
         height: 90vh;
     }
     .card .overlay-image-available{
-        left: 20%;
-        top: 90%;
+        width: 45px;
+        top: 15%;
     }
 
     .card .overlay-image-engine {
-        left: 80%;
-        top: 90%;
+        width: 45px;
+        top: 15%;
     }
 
-    .card .overlay-text {
-        width: 95%;
-        top: 45%;
-        transform: translate(-50%, -50%);
-    }
 }
 
 @media (min-width: 769px) and (max-width: 1024px) {
