--- a/stylesfocused.css
+++ b/stylesfocused.css
@@ -13,11 +13,10 @@ body {
 
 .corner-container {
   position: fixed;
-  bottom: 0;
+  top: 0;
   right: 0;
-  background-color: #f9f9f91c;
   border-radius: 2vh;
-  padding: 10px;
+  padding: 100px;
   z-index: 10;
 }
 
@@ -30,6 +29,7 @@ body {
 
 .hover-text:hover {
   transform: scale(1.1) rotate(-7deg);
+  cursor: pointer;
 }
 
 /*Scrollbar*/
@@ -155,14 +155,14 @@ body {
     display: flex;
     flex-direction: column;
     position: absolute;
-    width: 70%;
-    height: 88%;
-    top: 55%;
+    width: 95%;
+    height: 95%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: #474747;
+    background-color: #15202B;
     z-index: 1;
-    border-radius:  1%;
+    border-radius:  5px;
 }
 
 
@@ -177,8 +177,9 @@ body {
     width: 100%;
     padding: 2px;
     padding-left: 2%;
-    background-color: #282a2b;
+    background-color: #00000000;
     text-align: left;
+    outline: 3px dashed #cccccc;
     
     cursor: pointer;
     margin-bottom: 10px;
@@ -248,6 +249,61 @@ body {
     height: 90%;
 }
 
+.intro {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin: 20px 0;
+  margin-bottom: 5%;
+
+}
+
+.intro .rounded-image {
+  width: 350;
+  height: 350px;
+  overflow: hidden;
+  border-radius: 50%;
+  margin-right: 20px;
+  outline: 3px dashed #be9351;
+}
+
+.information-image img {
+  max-width: 100%;
+  height: auto;
+  outline: 3px dashed #ffffff;
+}
+
+.intro img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; 
+  border-radius: 50%;
+}
+
+.intro-text {
+  flex: 1;
+  margin-left: 20px;
+}
+
+.container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 20px;
+}
+.header {
+  text-align: center;
+  padding: 10px;
+  width: 100%;
+  margin-bottom: 20px;
+}
+.content {
+  padding: 20px;
+  max-width: 800px;
+}
+.content p {
+  line-height: 1.6;
+}
 
 /*Takes care of card size based on screen size*/
 @media (max-width: 768px) {
@@ -258,6 +314,44 @@ body {
 
     .smallContainer{
         width: 90%;
+    }
+
+    .intro {
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+    }
+
+    .intro-text {
+        margin-left: 0;
+    }
+
+    .intro img {
+      width: 50%;
+      height: 50%;
+      outline: 3px dashed #be9351;
+      border-radius: 50%;
+      object-fit: cover;
+    }
+
+    .container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 20px;
+    }
+    .header {
+      text-align: center;
+      padding: 10px;
+      width: 100%; /* Ensure header takes full width */
+      margin-bottom: 20px; /* Space between header and content */
+    }
+    .content {
+      padding: 20px;
+      max-width: 800px; /* Limit maximum width of content */
+    }
+    .content p {
+      line-height: 1.6;
     }
 }
 
